--- a/app/src/main/res/layout/activity_complaint.xml
+++ b/app/src/main/res/layout/activity_complaint.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.prashanjeet.messmanager.Complaint">
+    tools:context="com.example.rohit.messmanager.Complaint">
 
     <EditText
         android:id="@+id/Name_EditText"
