--- a/app/src/main/res/layout/activity_feed_back.xml
+++ b/app/src/main/res/layout/activity_feed_back.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.prashanjeet.messmanager.FeedBack">
+    tools:context="com.example.rohit.messmanager.FeedBack">
 
     <TextView
         android:id="@+id/FeedbackDate_TextView"
