--- a/app/src/main/res/layout/activity_student_sign_up.xml
+++ b/app/src/main/res/layout/activity_student_sign_up.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.prashanjeet.messmanager.StudentSignUp">
+    tools:context="com.example.rohit.messmanager.StudentSignUp">
     <TextView
         android:id="@+id/signUpActi"
         android:layout_width="wrap_content"
